# docs/swagger.json
@@ -161,6 +161,75 @@
                     }
                 }
             }
+        },
+        "/budget": {
+            "post": {
+                "description": "Creates a new budget for the user with the provided details",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Budget"
+                ],
+                "summary": "Create a new budget",
+                "operationId": "create-budget",
+                "parameters": [
+                    {
+                        "description": "Budget Details",
+                        "name": "budget",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/finly-backend_internal_service_budget.CreateBudgetRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/finly-backend_internal_service_budget.CreateBudgetResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/budget/{budget_id}": {
+            "get": {
+                "description": "Retrieves a budget by its ID for the specified user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Budget"
+                ],
+                "summary": "Get budget by ID",
+                "operationId": "get-budget-by-id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Budget ID",
+                        "name": "budget_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/finly-backend_internal_service_budget.GetBudgetByIDResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -277,6 +346,42 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "finly-backend_internal_service_budget.CreateBudgetRequest": {
+            "type": "object",
+            "required": [
+                "currency",
+                "name",
+                "userID"
+            ],
+            "properties": {
+                "currency": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "string"
+                }
+            }
+        },
+        "finly-backend_internal_service_budget.CreateBudgetResponse": {
+            "type": "object"
+        },
+        "finly-backend_internal_service_budget.GetBudgetByIDResponse": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 }
             }
